# PB_24E1_5

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml  setup.cfg
api/src/: app.py  topics_data.json
api/src/blueprints/: topics.py
api/src/helpers/: config.py
api/src/models/: topics.py
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: __init__.py  dependencies.py
backend/src/api/v1/: __init__.py
backend/src/api/v1/endpoints/: __init__.py  auth.py  posts.py  profiles.py  topics.py
backend/src/core/: __init__.py  events.py
backend/src/schemas/: __init__.py  auth_schema.py  base_schema.py  message_schema.py  post_schema.py  profile_schema.py  supabase_schema.py  topic_schema.py
backend/src/services/: __init__.py  auth_service.py  base_service.py  message_service.py  post_service.py  profile_service.py  topic_service.py
backend/supabase/: config.toml
backend/supabase/migrations/: 20240606174830_remote_schema.sql  20240606213259_create_forum.sql
client/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
client/src/: App.css  App.jsx  main.jsx  utils.js
client/src/components/: AuthCard.jsx  AuthorCard.jsx  Greeting.jsx  Navbar.jsx  PostDetail.jsx  PostsList.jsx  TopicCard.jsx  TopicPost.jsx  Topics.jsx  UserCard.jsx
client/src/context/: AuthProvider.jsx
client/src/hooks/: AuthProvider.jsx
client/src/layouts/: default.jsx
client/src/routes/: router.jsx
client/src/utils/: env.js  (+3 more)
react-native-forum/: App.js  app.json  package.json
(+33 files in other folders)
