[tool.poetry]
name = "api"
version = "0.1.0"
description = "project api"
authors = ["xnatsuk <xnatsuk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
black = "^24.4.2"
Flask-Cors = "^4.0.0"
autopep8 = "^2.1.0"
pylint = "^3.1.0"

[tool.poetry.dev-dependencies]
pylama = "^8.4.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
